# amigao

./: CMakeLists.txt  README.md
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/Testing/Temporary/: CTestCostData.txt
build_test/manager_bin/: CTestTestfile.cmake  Makefile  add_dict_table_from_file  cmake_install.cmake  tmp
build_test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  plain_search_strategy_test
build_test/utils_lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
data/: cppjieba_dict.ini  last_spide_time  mariadb_info.ini  start_url_lists.txt  url_lists.txt
data/read_url/: r1
data/start_url/: sedJgKDmx  w1
data/write_url/: w1  w5
doc/: class_diagrams.org  cppjieba_use_sequence.org  db_operation_class_diagram.org  db_pool_class_diagram.org  db_pool_list_class_diagram.org  ini_parser_class_diagram.org  pqueue_class_diagram.org  valuate_strategy_class_diagram.org
manager/: CMakeLists.txt  add_dict_table_from_file.cc  tmp.cc
page/: amigao.html  index.html  susu1970.html  top.html
page/amigao/: index.html
page/css/: a_link.css  paging.css  scrollbar_orange.css
src/: CMakeLists.txt  values.h
src/db/: db_info.hpp  db_pool_list.hpp  sql_db_operation.hpp  sql_db_pool.hpp
src/http/: CMakeLists.txt  search_server.cc
src/interface/: db_operation.h  db_pool.h  search_result.h  search_strategy.h  thread_pool.h  valuate_strategy.h
src/spider/: CMakeLists.txt  crawl_worker.cc  master.cc  monitor.cc  parse_worker.cc  shmctrl.h
src/spider_multithr/: spider.cc
src/strategy/: plain_search_result.hpp  plain_search_strategy.hpp  reverse_search_result.hpp  reverse_search_strategy.hpp  reverse_valuate_strategy.hpp
src/utils/: CMakeLists.txt  crypt_string.cc  escape_url.cc  format_url.cc  gbk2utf8.cc  ini_parser.hpp  maria_op.cc  op_redis.hpp  parse_html.cc  parse_url.cc  str2html.cc  str2sum.cc
src/utils/cppjieba/: Jieba.hpp
test/: CMakeLists.txt  a.cc  crypt_string.cc  db_info.cc  db_pool_list.cc  format_url.cc  gbk_reg  gbk_reg.cc  ini_parser.cc  op_redis.cc  parse_url.cc  plain_search_strategy.cc  sql_db_operation.cc  sql_db_pool.cc
test/data/: db_info.ini  ini_parser.ini  sql_db_info.ini
